# pyttn

./: '  .gitignore  .gitlab-ci.yml  :w  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  \  ]  out  pyproject.toml  pytest.ini  setup.py  setup_docs.sh  test.py  tree_gen.ipynb
cmake/: FindCUTENSOR.cmake
docs/: conf.py
docs/source/: conf.py  operator_generation.nblink  p3ht_pcbm.rst  pyttn.linalg.rst  pyttn.oqs.heom.rst  pyttn.oqs.rst  pyttn.rst  pyttn.ttns.sop.models.rst  ttn_operations.nblink  tutorials.rst
examples/: \  aim_hamiltonian.py  dissipative_tfim.py  driven.py  multiOrbital.py  omp_test.py  plot.py  plot_trees.py  siam_test.py  system_info.py  test.py  tfim.py  visualise_tree_test.py
examples/VSC/: molecule.py
examples/anderson_impurity_model/: TOV.py  TOV_on_gold_AIM_20K.hdf5  ]  dqd.py  jw_test.py  plot.py  siam 4.py  siam.py  siam2.py  siam_pseudomode.py
examples/dissipative_spin_models/: plot.py
examples/dissipative_xy_spin_chain/: plot_pop.py  plot_xy.py  xy_chain_fit.py  xy_chain_heom.py  xy_chain_pseudomode.py  xy_chain_unitary.py
examples/electronic_structure/: es_SOP_vs_hSOP.py
examples/fmo/: fmo.py
examples/holstein/: \  dntt.h5  dntt.py  dntt_5_150_4.h5  dntt_7_150_16.h5  dntt_7_150_24.h5  dntt_7_150_4.h5  dntt_model.py  holstein.h5  holstein.py  holstein_1.5_64.h5  holstein_128.h5  holstein_16.h5  holstein_2.5_32.h5  holstein_2d.h5  holstein_2d_2.h5  holstein_32.h5  holstein_64.h5  holstein_pierels.py  one_dimensional_holstein.py  plot.py  plot_dntt.py  plot_dntt_curves.py  plot_pops.py  plot_pops_2d.py  two_dimensional_holstein.py
examples/oqs/: \  dqd.py  fmo.py  msb.py  multiorbital_aim.py  out  plot.py  plot_readout.py  sbm.py  sbm_heom.py  sbm_heom_old.py  sbm_metts.py  sbm_purif.py  sbm_symmetrised_metts.py  siam.py  siam_readout.py  test.py  tree_test.py
examples/p3ht_pcbm_heterojunction/: \  modelA_hamiltonian.py  model_B_hamiltonian.py  model_hamiltonian.py  multi_threaded  multiset_hamiltonian.py  multithreaded  out  p3ht_pcbm.h5  p3ht_pcbm.py  p3ht_pcbm_hamiltonian.py  p3ht_pcbm_modelA.py  p3ht_pcbm_mps_test.py  p3ht_pcbm_multiset.py  p3ht_pcbm_tree.py  plot.py  plot_diff.py  population_plot.py  single_threaded
examples/pyrazine/: README.md  out  out2  out4  out_multiset  plot.py  pyrazine.py  pyrazine_dynamics.py  pyrazine_hamiltonian.py  pyrazine_mode_combination.py  pyrazine_multiset.py  pyrazine_tree.py
examples/scaling/: electronic_structure_hamiltonian.py  molecular_hamiltonian_scaling.py
examples/spin_boson_model/: =2.2  \  bath_discretisation.py  out  out_ipchain  plot.py  plot_xy.py  sbm.h5  sbm.py  sbm_bath_discretisation.py  sbm_bath_fitting.py  sbm_chain.h5  sbm_core.py  sbm_heom.py  (+16 more)
python/: CMakeLists.txt  __init__.py  pythonBinding.cpp  pythonBinding.cu  pyttn.cpp  pyttn_typedef.hpp  utils.hpp
python/linalg/: backend.cpp  backend.hpp  cuda_backend.cu  cuda_backend.hpp  orthogonal_vector_gen.cpp  orthogonal_vector_gen.hpp  sparseMatrix.cpp  sparseMatrix.cu  sparseMatrix.hpp  tensor.cpp  tensor.cu  tensor.hpp
python/oqs/: __init__.py  bath_discretisation.py  bath_hamiltonian.py  bosonic_bath.py  fermionic_bath.py
python/oqs/heom/: aaa_bath_fitting.py  heom_operators.py
python/ttns/: __init__.py
python/ttns/algorithms/: dmrg.cpp  dmrg.hpp  dmrgExt.py  tdvp.cpp  tdvp.hpp  tdvpExt.py
python/ttns/observables/: matrixElementExt.py  matrix_element.cpp  matrix_element.hpp
python/ttns/operators/: __init__.py  opsExt.py  product_operator.cpp  product_operator.hpp  siteOperators.cpp  siteOperators.hpp  siteOperatorsExt.py  sopOperatorExt.py  sop_operator.cpp  sop_operator.hpp
python/ttns/sop/: SOP.cpp  SOP.hpp  SOPExt.py  __init__.py  liouville_space.cpp  liouville_space.hpp  operator_dictionary.cpp  operator_dictionary.hpp  sSOP.cpp  sSOP.hpp  sSOPExt.py  state.cpp  state.hpp  system_information.cpp  system_information.hpp  toDense.cpp  toDense.hpp
python/ttns/sop/models/: __init__.py  models.cpp  models.hpp
python/ttns/ttn/: __init__.py  ms_ttn.cpp  ms_ttn.hpp  ntree.cpp  ntree.hpp  ttn.cpp  ttn.hpp  ttnExt.py
python/utils/: __init__.py  discretisation.cpp  discretisation.hpp  orthopol.cpp  orthopol.hpp
pyttn/: __init__.py
pyttn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: CMakeLists.txt  operator_gen.cpp  operator_optimisation.cpp  pyrazine_operator.cpp  siam.cpp  spin_boson.cpp  spin_boson_multiset.cpp  spin_boson_operator.cpp  spin_boson_pseudomode.cpp  ttns_toolkit.cpp
tests/: CMakeLists.txt
tests/linalg/: CMakeLists.txt
tests/pyttn/algorithms/: test_dmrg.py
tests/pyttn/linalg/: test_orthogonal.py  test_sparse.py  test_tensor.py
tests/pyttn/observables/: conftest.py  test_matrix_element_mps.py  test_matrix_element_ms_mps.py  test_matrix_element_ms_ttn.py  test_matrix_element_ttn.py
tests/pyttn/operators/: test_operator_symbolic.py  test_site_operator.py  test_site_operator_symbolic.py
tests/pyttn/oqs/: test_bosonicBath.py
tests/pyttn/state/: test_ket.py  test_sepState.py  test_stateStr.py
tests/pyttn/topology/: test_hierarchical_clustering.py  test_spanning_tree.py  test_update_bond_properties.py
tests/ttns/: CMakeLists.txt  helper_functions.hpp  ttn_test.cpp
tests/ttns/operators/: .primitive_operator.cpp.swp  dense_matrix_operators.cpp  diagonal_matrix_operators.cpp  primitive_operator.cpp  sparse_matrix_operators.cpp  sum_operators.cpp
tests/ttns/sop/: CMakeLists.txt
tests/ttns/sop/operator_dictionaries/: CMakeLists.txt  boson_operators.cpp  fermion_operators.cpp  pauli_operators.cpp  spin_operators.cpp
tests/ttns/tree/: CMakeLists.txt  ntree_builder_test.cpp  ntree_test.cpp  tree_test.cpp
tests/utils/: bipartite_graph_test.cpp  bipartite_matching_test.cpp  indexing_array_test.cpp  product_iterator_test.cpp
tutorials/: dmrg_TFIM.ipynb  dmrg_TFIM_ttn.ipynb  example_tdvp_cayley.ipynb  operator_generation.ipynb  oqs_sbm_heom.ipynb  quickstart_dmrg_tfim.ipynb  quickstart_open_quantum_systems.ipynb  spin_boson_model.ipynb  state_preparation.ipynb  tdvp_cayley_XY.ipynb  tdvp_cayley_XY_mps.ipynb  tree_topologies.ipynb  ttn_operations.ipynb
(+706 files in other folders)
